--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 streamlit
-tensorflow==2.12.0
+tensorflow-cpu==2.11.0
 joblib
-opencv-python-headless
+opencv-python-headless==4.8.0.74
 pandas
 numpy
 shap
@@ -9,4 +9,3 @@ matplotlib
 Pillow
 gdown
 scikit-learn
-
